# Proyecto_dis_sci

./: .coverage  .gitignore  1  README.md  Untitled.ipynb  parameters_1d_seed=1.npy  pyproject.toml  pyproject.toml~  requeriments.txt  requirements.txt  runs.ipynb  skreducedmodel.py  test_ReducedModelFit.py  test_integrals_copy.py  test_skreducedmodel.py  test_validators.py  tox.ini  tox.ini~  validators.py
.ipynb_checkpoints/: Pendulo-Copy1-checkpoint.ipynb
docs/source/: .conf.py.swp  1  conf.py  conf.py~  empiricalinterpolation.rst  index.rst  index.rst~  integrals.rst  modules.rst  reducedbasis.rst
scikitreducedmodel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scikitreducedmodels.egg-info/: PKG-INFO  SOURCES.txt
skreducedmodel/: .empiricalinterpolation.py.swp  .reducedbasis.py.swp  empiricalinterpolation.py  empiricalinterpolation.py~  integrals.py  reducedbasis.py  reducedbasis.py~  skeim.py  skreducedmodel.py  skreducedmodel.py.NOAUN  skreducedmoder_edit.py  validators.py
tests/: skreducedmodel-not_for_use.py  test_eim.py  test_empiricalintepolation.py  test_integrals.py  test_reducedbasis.py  test_skreducedbasis.py  test_skreducedmodel.py  test_skreducedmodel.py~  test_validators.py
tests/data/: cut_data.py  q_test_1d_seed_eq_1.npy  q_train_1d_seed=1.npy  ts_test_1d_seed_eq_1.npy  ts_train_1d_seed=1.npy
